// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 2`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 3`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 4`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 5`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 6`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 7`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 8`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 9`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 10`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 11`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 12`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 13`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 14`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 15`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 16`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 17`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 18`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 19`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 20`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;

exports[`renders without crashing 21`] = `
<DocumentFragment>
  <p>
    Oh no... [GraphQL] [line: 1] field 'body' is not defined in 'Post'
  </p>
</DocumentFragment>
`;
